--- a/style.css
+++ b/style.css
@@ -196,22 +196,25 @@ a{
 }
 
 .home-info .btn-sci{
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
 }
 
 
 .btn{
-    display: inline-block;
-    padding: 10px 30px;
-    background-color:  var(--main-color-2);
-    border: var(--main-color-2);
-    border-radius: 40px;
-    box-shadow: 0 0 10px var(--main-color-2);
-    font-size: 16px;
-    color: var(--bg-color);
-    font-weight: 600;
-    transition: .5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 30px;
+  background-color:  var(--main-color-2);
+  border: var(--main-color-2);
+  border-radius: 40px;
+  box-shadow: 0 0 10px var(--main-color-2);
+  font-size: 16px;
+  color: var(--bg-color);
+  font-weight: 600;
+  transition: .5s;
 }
 
 
@@ -222,7 +225,8 @@ a{
 }
 
 .home-info .btn-sci .sci{
-    margin-left: 20px;
+  margin-left: 20px;
+  gap: 1.5rem;
 }
 
 
@@ -364,14 +368,16 @@ a{
 .about-img img{
   width: 32vw;
   border-radius: 20%;
-  box-shadow: 0 0 25px var(--main-color);
-  transition: 0.4s ease-in-out;
+ /* box-shadow: 0 0 25px var(--main-color);
+  transition: 0.4s ease-in-out; */
+
+  border: 2px solid var(--text-color);
   margin: 0;
 }
 .about-img img:hover{
-  box-shadow: 0 0 25px var(--main-color), 
+  /*  box-shadow: 0 0 25px var(--main-color), 
               0 0 50px var(--main-color),
-              0 0 100px var(--main-color);
+              0 0 100px var(--main-color); */
 }
 
 .about-content p{
@@ -833,6 +839,62 @@ transform: scale(1.03);
 }
 
 @media (max-width: 700px){
+
+  .home-info .btn-sci {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 2.5rem;
+  }
+  .home-info .btn-sci .btn {
+    margin-bottom: 1.5rem;
+  }
+  .home-info .btn-sci .sci {
+    margin-left: 0;
+    margin-top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    gap: 1.5rem;
+  }
+  .home-info h2 {
+    display: block;
+    font-size: 2.5rem;
+    min-height: 3.5em;
+    margin-bottom: 2rem;
+    text-align: left;
+    line-height: 1.3;
+    word-break: break-word;
+  }
+  .home-info h2 span {
+    display: inline-block;
+    position: relative;
+    color: transparent;
+    -webkit-text-stroke: 0.7px var(--main-color-2);
+    animation: display-text 8s linear infinite;
+    animation-delay: calc(-5s * var(--i));
+    min-width: 100%;
+    min-height: 2.2em;
+    margin-top: 0.5em;
+    z-index: 1;
+  }
+  .home-info h2 span::before {
+    content: attr(data-text);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0%;
+    border-right: 2px solid var(--main-color-2);
+    color: var(--main-color-2);
+    white-space: nowrap;
+    overflow: hidden;
+    animation: fill-text 3s linear infinite;
+    z-index: 2;
+  }
+  .home-info h2 span.active::before {
+    width: 100%;
+    transition: width 0.3s;
+  }
+}
 
 .services-container{
   display: grid;
